--- a/Index/计算几何.md
+++ b/Index/计算几何.md
@@ -1,5 +1,6 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [587. 安装栅栏](https://leetcode-cn.com/problems/erect-the-fence/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/erect-the-fence/solution/by-ac_oier-4xuu/) | 困难 | 🤩🤩🤩🤩🤩    |
+| [593. 有效的正方形](https://leetcode.cn/problems/valid-square/) | [LeetCode 题解链接](https://leetcode.cn/problems/valid-square/solution/by-ac_oier-lwdf/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [1037. 有效的回旋镖](https://leetcode.cn/problems/valid-boomerang/) | [LeetCode 题解链接](https://leetcode.cn/problems/valid-boomerang/solution/by-ac_oier-eory/) | 简单 | 🤩🤩🤩🤩🤩    |
 
