--- a/LeetCode/221-230/227. 基本计算器 II（中等）.md
+++ b/LeetCode/221-230/227. 基本计算器 II（中等）.md
@@ -6,44 +6,45 @@ Tag : 「表达式计算」
 
 
 
-给你一个字符串表达式 s ，请你实现一个基本计算器来计算并返回它的值。
+给你一个字符串表达式 `s` ，请你实现一个基本计算器来计算并返回它的值。
 
 整数除法仅保留整数部分。
-
-
 
 示例 1：
 ```
 输入：s = "3+2*2"
+
 输出：7
 ```
 示例 2：
 ```
 输入：s = " 3/2 "
+
 输出：1
 ```
 示例 3：
 ```
 输入：s = " 3+5 / 2 "
+
 输出：5
 ```
 
 提示：
-* 1 <= s.length <= 3 * $10^5$
-* s 由整数和算符 ('+', '-', '*', '/') 组成，中间由一些空格隔开
-* s 表示一个 有效表达式
-* 表达式中的所有整数都是非负整数，且在范围 [0, $2^{31}$ - 1] 内
-* 题目数据保证答案是一个 32-bit 整数
+* $1 <= s.length <= 3 \times 10^5$
+* `s` 由整数和算符 (`'+'`, `'-'`, `'*'`, `'/'`) 组成，中间由一些空格隔开
+* `s` 表示一个 有效表达式
+* 表达式中的所有整数都是非负整数，且在范围 $[0, 2^{31} - 1]$ 内
+* 题目数据保证答案是一个 `32-bit` 整数
 
 ---
 
-### 双栈解法
+### 双栈
 
-如果你有看这篇 [题解](https://leetcode-cn.com/problems/basic-calculator/solution/shuang-zhan-jie-jue-tong-yong-biao-da-sh-olym/) 的话，今天这道题就是道练习题。
+如果你有看这篇 [224. 基本计算器](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247492602&idx=1&sn=135fd5b530189f13e0395414a6b47893) 的话，今天这道题就是道练习题。
 
 帮你巩固 **双栈解决「通用表达式」问题的通用解法** 。
 
-**事实上，我提供这套解决方案不仅仅能解决只有 `+ - ( )`（[224. 基本计算器](https://leetcode-cn.com/problems/basic-calculator/)） 或者 `+ - * /`([227. 基本计算器 II](https://leetcode-cn.com/problems/basic-calculator-ii/solution/)) 的表达式问题，还能解决 `+ - * / ^ % ( )` 的完全表达式问题。**
+**事实上，我提供这套解决方案不仅仅能解决只有 `+ - ( )`的 [[224. 基本计算器]](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247492602&idx=1&sn=135fd5b530189f13e0395414a6b47893) 或者 `+ - * /` [227. 基本计算器 II（本题）] 的表达式问题，还能解决 `+ - * / ^ % ( )` 的完全表达式问题。**
 
 甚至支持自定义运算符，只要在运算优先级上进行维护即可。
 
@@ -164,11 +165,11 @@ class Solution {
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
-***
+---
 
 ### 总结
 
-还记得我在 [题解](https://leetcode-cn.com/problems/basic-calculator/solution/shuang-zhan-jie-jue-tong-yong-biao-da-sh-olym/) 留的「进阶」内容？
+还记得我在 [题解](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247492602&idx=1&sn=135fd5b530189f13e0395414a6b47893) 留的「进阶」内容？
 
 1. 如果 `+ -` 基础上，再考虑 `*` 和 `/`，需要增加什么考虑？如何维护运算符的优先级？
 
