--- a/LeetCode/1811-1820/1818. 绝对差值和（中等）.md
+++ b/LeetCode/1811-1820/1818. 绝对差值和（中等）.md
@@ -6,17 +6,18 @@ Tag : 「二分」
 
 
 
-给你两个正整数数组 nums1 和 nums2 ，数组的长度都是 n 。
+给你两个正整数数组 `nums1` 和 `nums2` ，数组的长度都是 `n` 。
 
-数组 nums1 和 nums2 的 绝对差值和 定义为所有 |nums1[i] - nums2[i]|（0 <= i < n）的 总和（下标从 0 开始）。
+数组 `nums1` 和 `nums2` 的 **绝对差值和** 定义为所有 `|nums1[i] - nums2[i]|（0 <= i < n）`的 总和（下标从 $0$ 开始）。
 
-你可以选用 nums1 中的 任意一个 元素来替换 nums1 中的 至多 一个元素，以 最小化 绝对差值和。
+你可以选用 `nums1` 中的 **任意一个** 元素来替换 `nums1` 中的 **至多** 一个元素，以 **最小化** 绝对差值和。
 
-在替换数组 nums1 中最多一个元素 之后 ，返回最小绝对差值和。因为答案可能很大，所以需要对 $10^9 + 7$ 取余 后返回。
+在替换数组 `nums1` 中最多一个元素 之后 ，返回最小绝对差值和。因为答案可能很大，所以需要对 $10^9 + 7$ 取余 后返回。
 
-|x| 定义为：
-* 如果 x >= 0 ，值为 x ，或者
-* 如果 x <= 0 ，值为 -x
+`|x|` 定义为：
+
+* 如果 $x >= 0$，值为 `x` ，或者
+* 如果 $x <= 0$，值为 `-x`
 
 
 
@@ -51,10 +52,10 @@ Tag : 「二分」
 ```
 
 提示：
-* n == nums1.length
-* n == nums2.length
-* 1 <= n <= $10^5$
-* 1 <= nums1[i], nums2[i] <= $10^5$
+* $n == nums1.length$
+* $n == nums2.length$
+* $1 <= n <= 10^5$
+* $1 <= nums1[i], nums2[i] <= $10^5$
 
 ---
 
