--- a/LeetCode/621-630/622. 设计循环队列（中等）.md
+++ b/LeetCode/621-630/622. 设计循环队列（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[622. 设计循环队列](https://leetcode.cn/problems/design-circular-queue/solution/by-ac_oier-y11p/)** ，难度为 **中等**。
 
-Tag : 「设计数据结构」
+Tag : 「设计数据结构」、「队列」
 
 
 
