--- a/LeetCode/891-900/899. 有序队列（困难）.md
+++ b/LeetCode/891-900/899. 有序队列（困难）.md
@@ -47,7 +47,11 @@ Tag : 「构造」、「最小表示法」
 
 而实际上，对于给定字符串 `s`，求其循环同构的所有方案中字典序最小的方案，可以使用「最小表示法」来做，复杂度为 $O(n)$。
 
-最小表示法将「方案比较」与「构造更优方案」进行结合：假设我们当前有两字符串 `a` 和 `b` 需要进行比较，其均为原串 `s` 的循环同构具体方案。假设 `a` 和 `b` 分别对应了原串下标为 `i` 和 `j` 的具体方案，且假设两字符串前 $k$ 个字符均相同。当两字符串第一个不同的字符大小关系为 $cs[i + k] > cs[j + k]$ 时，可以发现以下标范围 $[i, i + k]$ 作为起点的新方案必然不可能比字符串 `b` 更优，因此我们可以直接从 $i + k + 1$ 位置构造新的更优方案，并与 `b` 再次比较。而 $cs[i + k] < cs[j + k]$ 的分析同理。
+最小表示法将「方案比较」与「构造更优方案」进行结合：假设我们当前有两字符串 `a` 和 `b` 需要进行比较，其均为原串 `s` 的循环同构具体方案。假设 `a` 和 `b` 分别对应了原串下标为 `i` 和 `j` 的具体方案，且假设两字符串前 $k$ 个字符均相同。
+
+当两字符串第一个不同的字符大小关系为 $cs[i + k] > cs[j + k]$ 时，可以发现在下标范围 $idx \in [i, i + k]$ 作为起点的新方案 `a'` 必然不会是最优方案，即必然存在下标范围 $idx - i + j$ 作为起点的新方案 `b'` 比其更优，因此我们可以直接从 $i + k + 1$ 位置构造新的更优方案，并与 `b` 再次比较。而 $cs[i + k] < cs[j + k]$ 的分析同理。
+
+> 更为直白的表述为：分别从 `i` 和 `j` 作为起点的字符串 `a` 和 `b`，其前 $k$ 个字符相同，而当 $cs[i + k] > cs[j + k]$ 时，我们可以明确「以 $i + p$ 为起点的字符串」必不可能比「以 $j + p$ 为起点的字符串」更优，其中 $p \in [0, k]$。
 
 Java 代码：
 ```Java
@@ -98,7 +102,7 @@ function orderlyQueue(s: string, _k: number): string {
 };
 ```
 * 时间复杂度：当 $k = 1$ 时，复杂度为 $O(n)$；当 $k > 1$ 时，复杂度为 $O(n\log{n})$
-* 空间复杂度：当 $k > 1$ 时，需要使用额外的排序空间 $O(n\log{n})$
+* 空间复杂度：当 $k > 1$ 时，需要使用额外的排序空间 $O(\log{n})$
 
 ---
 
