--- a/LeetCode/621-630/623. 在二叉树中增加一行（中等）.md
+++ b/LeetCode/621-630/623. 在二叉树中增加一行（中等）.md
@@ -49,11 +49,7 @@ Java 代码：
 ```Java
 class Solution {
     public TreeNode addOneRow(TreeNode root, int val, int depth) {
-        if (depth == 1) {
-            TreeNode ans = new TreeNode(val);
-            ans.left = root;
-            return ans;
-        }
+        if (depth == 1) return new TreeNode(val, root, null);
         Deque<TreeNode> d = new ArrayDeque<>();
         d.addLast(root);
         int cur = 1;
@@ -79,11 +75,7 @@ class Solution {
 TypeScript 代码：
 ```TypeScript
 function addOneRow(root: TreeNode | null, val: number, depth: number): TreeNode | null {
-    if (depth == 1) {
-        const ans = new TreeNode(val)
-        ans.left = root
-        return ans
-    }
+    if (depth == 1) return new TreeNode(v, root, null);
     const stk = new Array<TreeNode>()
     let he = 0, ta = 0, cur = 1
     stk[ta++] = root
@@ -120,11 +112,7 @@ class Solution {
     int d, v;
     public TreeNode addOneRow(TreeNode root, int val, int depth) {
         d = depth; v = val;
-        if (d == 1) {
-            TreeNode ans = new TreeNode(val);
-            ans.left = root;
-            return ans;
-        }
+        if (d == 1) return new TreeNode(val, root, null);
         dfs(root, 1);
         return root;
     }
@@ -146,11 +134,7 @@ TypeScript 代码：
 let d = 0, v = 0
 function addOneRow(root: TreeNode | null, val: number, depth: number): TreeNode | null {
     d = depth; v = val
-    if (d == 1) {
-        const ans = new TreeNode(v)
-        ans.left = root
-        return ans
-    }
+    if (d == 1) return new TreeNode(v, root, null);
     dfs(root, 1)
     return root
 };
