--- a/LeetCode/1401-1410/1408. 数组中的字符串匹配（简单）.md
+++ b/LeetCode/1401-1410/1408. 数组中的字符串匹配（简单）.md
@@ -42,12 +42,12 @@ Tag : 「模拟」
 
 ---
 
-## 模拟
+### 模拟
 
 根据题意进行模拟即可。
 
-代码：
-```Java []
+Java 代码：
+```Java
 class Solution {
     public List<String> stringMatching(String[] ss) {
         List<String> ans = new ArrayList<>();
@@ -65,7 +65,8 @@ class Solution {
     }
 }
 ```
-```TypeScript []
+TypeScript 代码：
+```TypeScript
 function stringMatching(ss: string[]): string[] {
     const ans = new Array<string>()
     const n = ss.length
