--- a/LeetCode/761-770/761. 特殊的二进制序列（困难）.md
+++ b/LeetCode/761-770/761. 特殊的二进制序列（困难）.md
@@ -35,7 +35,7 @@ Tag : 「构造」
 
 我们可以定义每个字符的得分：字符 `1` 得分为 $1$ 分，字符 `0` 得分为 $-1$ 分。
 
-根据题目对「特殊字符串」的定义可知，给定字符串 `s` 的总得分为 $0$，且任意子串不会出现得分为负数的情况。
+根据题目对「特殊字符串」的定义可知，给定字符串 `s` 的总得分为 $0$，且任意前缀串不会出现得分为负数的情况。
 
 考虑将 `s` 进行划分为多个足够小特殊字符串 `item`（足够小的含义为每个 `item` 无法再进行划分），每个 `item` 的总得分为 $0$。根据 `s` 定义，必然可恰好划分为多个 `item`。
 
