--- a/Index/数学.md
+++ b/Index/数学.md
@@ -43,6 +43,7 @@
 | [553. 最优除法](https://leetcode-cn.com/problems/optimal-division/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/optimal-division/solution/gong-shui-san-xie-shu-xue-lei-tan-xin-yu-61sq/) | 简单 | 🤩🤩🤩🤩🤩 |
 | [593. 有效的正方形](https://leetcode.cn/problems/valid-square/) | [LeetCode 题解链接](https://leetcode.cn/problems/valid-square/solution/by-ac_oier-lwdf/) | 中等 | 🤩🤩🤩🤩🤩 |
 | [633. 平方数之和](https://leetcode-cn.com/problems/sum-of-square-numbers/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/sum-of-square-numbers/solution/gong-shui-san-xie-yi-ti-san-jie-mei-ju-s-7qi5/) | 简单 | 🤩🤩 |
+| [640. 求解方程](https://leetcode.cn/problems/solve-the-equation/) | [LeetCode 题解链接](https://leetcode.cn/problems/solve-the-equation/solution/by-ac_oier-fvee/) | 中等 | 🤩🤩🤩🤩 |
 | [645. 错误的集合](https://leetcode-cn.com/problems/set-mismatch/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/set-mismatch/solution/gong-shui-san-xie-yi-ti-san-jie-ji-shu-s-vnr9/) | 简单 | 🤩🤩🤩 |
 | [650. 只有两个键的键盘](https://leetcode-cn.com/problems/2-keys-keyboard/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/2-keys-keyboard/solution/gong-shui-san-xie-yi-ti-san-jie-dong-tai-f035/) | 中等 | 🤩🤩🤩🤩 |
 | [780. 到达终点](https://leetcode-cn.com/problems/reaching-points/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reaching-points/solution/by-ac_oier-hw11/) | 困难 | 🤩🤩🤩🤩🤩 |
