--- a/LeetCode/851-860/852. 山脉数组的峰顶索引（简单）.md
+++ b/LeetCode/851-860/852. 山脉数组的峰顶索引（简单）.md
@@ -14,7 +14,6 @@ Tag : 「二分」、「三分」
 
 给你由整数组成的山脉数组 `arr` ，返回任何满足 `arr[0] < arr[1] < ... arr[i - 1] < arr[i] > arr[i + 1] > ... > arr[arr.length - 1]` 的下标 `i` 。
 
-
 示例 1：
 ```
 输入：arr = [0,1,0]
@@ -47,11 +46,11 @@ Tag : 「二分」、「三分」
 ```
 
 提示：
-* 3 <= arr.length <= $10^4$
-* 0 <= arr[i] <= $10^6$
-* 题目数据保证 arr 是一个山脉数组
+* $3 <= arr.length <= 10^4$
+* $0 <= arr[i] <= 10^6$
+* 题目数据保证 `arr` 是一个山脉数组
 
- **进阶**：很容易想到时间复杂度 O(n) 的解决方案，你可以设计一个 O(log(n)) 的解决方案吗？
+进阶：很容易想到时间复杂度 $O(n)$ 的解决方案，你可以设计一个 $O(\log{n})$ 的解决方案吗？
 
 ---
 
@@ -80,11 +79,8 @@ class Solution {
         int l = 1, r = n - 1;
         while (l < r) {
             int mid = l + r + 1 >> 1;
-            if (arr[mid - 1] < arr[mid]) {
-                l = mid;
-            } else {
-                r = mid - 1;
-            }
+            if (arr[mid - 1] < arr[mid]) l = mid;    
+            else r = mid - 1;
         }
         return r;
     }
@@ -99,11 +95,8 @@ class Solution {
         int l = 0, r = n - 2;
         while (l < r) {
             int mid = l + r >> 1;
-            if (arr[mid] > arr[mid + 1]) {
-                r = mid;
-            } else {
-                l = mid + 1;
-            }
+            if (arr[mid] > arr[mid + 1]) r = mid;    
+            else l = mid + 1;
         }
         return r;
     }
@@ -118,11 +111,8 @@ class Solution {
         int l = 1, r = n - 1;
         while (l < r) {
             int mid = l + r >> 1;
-            if (arr[mid - 1] > arr[mid]) {
-                r = mid;
-            } else {
-                l = mid + 1;
-            }
+            if (arr[mid - 1] > arr[mid]) r = mid;    
+            else l = mid + 1;
         }
         return r - 1;
     }
@@ -137,11 +127,8 @@ class Solution {
         int l = 0, r = n - 2;
         while (l < r) {
             int mid = l + r + 1 >> 1;
-            if (arr[mid] < arr[mid + 1]) {
-                l = mid;
-            } else {
-                r = mid - 1;
-            }
+            if (arr[mid] < arr[mid + 1]) l = mid;
+            else r = mid - 1;
         }
         return r + 1;
     }
@@ -167,13 +154,9 @@ class Solution {
         int n = arr.length;
         int l = 0, r = n - 1;
         while (l < r) {
-            int m1 = l + (r - l) / 3;
-            int m2 = r - (r - l) / 3;
-            if (arr[m1] > arr[m2]) {
-                r = m2 - 1;
-            } else {
-                l = m1 + 1;
-            }
+            int m1 = l + (r - l) / 3, m2 = r - (r - l) / 3;
+            if (arr[m1] > arr[m2]) r = m2 - 1;                
+            else l = m1 + 1;    
         }
         return r;
     }
@@ -186,13 +169,9 @@ class Solution {
 
 ### 二分 & 三分 & k 分 ？
 
-今天比较忙，没有及时回复评论。
+必须说明一点，「二分」和「三分」在渐进复杂度上都是一样的，都可以通过换底公式转化为可忽略的常数，因此两者的复杂度都是 $O(\log{n})$。
 
-看到了评论区有不少关于「三分」否决 1/3 区间存在疑问，感觉挺有代表性的，补充到题解好了 🤣
-
-但必须说明一点，「二分」和「三分」在渐进复杂度上都是一样的，都可以通过换底公式转化为可忽略的常数，因此两者的复杂度都是 $O(\log{n})$。
-
-因此选择「二分」还是「三分」取决于要解决的是什么问题：
+而选择「二分」还是「三分」取决于要解决的是什么问题：
 
 * 二分通常用来解决单调函数的找 $target$ 问题，但进一步深入我们发现只需要满足「二段性」就能使用「二分」来找分割点；
 * 三分则是解决单峰函数极值问题。
@@ -212,8 +191,7 @@ class Solution {
             } else if (arr[m2] < arr[m2 + 1]) {
                 left = m2 + 1;
             } else {
-                left = m1;
-                right = m2;
+                left = m1; right = m2;
             }
         }
         return left;
