--- a/LeetCode/151-160/154. 寻找旋转排序数组中的最小值 II（困难）.md
+++ b/LeetCode/151-160/154. 寻找旋转排序数组中的最小值 II（困难）.md
@@ -6,20 +6,18 @@ Tag : 「二分」
 
 
 
-已知一个长度为 n 的数组，预先按照升序排列，经由 1 到 n 次 旋转 后，得到输入数组。
+已知一个长度为 `n` 的数组，预先按照升序排列，经由 $1$ 到 $n$ 次 旋转 后，得到输入数组。
 
-例如，原数组 nums = [0,1,4,4,5,6,7] 在变化后可能得到：
+例如，原数组 `nums = [0,1,4,4,5,6,7]` 在变化后可能得到：
 
-* 若旋转 4 次，则可以得到 [4,5,6,7,0,1,4]
-* 若旋转 7 次，则可以得到 [0,1,4,4,5,6,7]
+* 若旋转 $4$ 次，则可以得到 `[4,5,6,7,0,1,4]`
+* 若旋转 $74 次，则可以得到 `[0,1,4,4,5,6,7]`
 
-注意，数组 [a[0], a[1], a[2], ..., a[n-1]] 旋转一次 的结果为数组 [a[n-1], a[0], a[1], a[2], ..., a[n-2]] 。
+注意，数组 `[a[0], a[1], a[2], ..., a[n-1]]` 旋转一次 的结果为数组 `[a[n-1], a[0], a[1], a[2], ..., a[n-2]]` 。
 
-给你一个可能存在「重复」元素值的数组 nums ，它原来是一个升序排列的数组，并按上述情形进行了多次旋转。
+给你一个可能存在「重复」元素值的数组 `nums` ，它原来是一个升序排列的数组，并按上述情形进行了多次旋转。
 
 请你找出并返回数组中的「最小元素」。
-
- 
 
 示例 1：
 ```
@@ -35,10 +33,10 @@ Tag : 「二分」
 ```
 
 提示：
-* n == nums.length
-* 1 <= n <= 5000
-* -5000 <= nums[i] <= 5000
-* nums 原来是一个升序排序的数组，并进行了 1 至 n 次旋转
+* $n == nums.length$
+* $1 <= n <= 5000$
+* $-5000 <= nums[i] <= 5000$
+* `nums` 原来是一个升序排序的数组，并进行了 $1$ 至 $n$ 次旋转
 
 
 进阶：
@@ -47,7 +45,7 @@ Tag : 「二分」
 
 ---
 
-### 二分解法
+### 二分
 
 根据题意，我们知道，所谓的旋转其实就是「将某个下标前面的所有数整体移到后面，使得数组从整体有序变为分段有序」。
 
@@ -63,29 +61,40 @@ Tag : 「二分」
 
 ![image.png](https://pic.leetcode-cn.com/1617852745-LoBNPK-image.png)
 
-代码：
-```java []
+Java 代码：
+```java
 class Solution {
-    public int findMin(int[] nums) {
+    public int minArray(int[] nums) {
         int n = nums.length;
         int l = 0, r = n - 1;
         while (l < r && nums[0] == nums[r]) r--;
         while (l < r) {
             int mid = l + r + 1 >> 1;
-            if (nums[mid] >= nums[0]) {
-                l = mid;
-            } else {
-                r = mid - 1;
-            }
+            if (nums[mid] >= nums[0]) l = mid;                
+            else r = mid - 1;
         }
         return r + 1 < n ? nums[r + 1] : nums[0];
     }
 }
 ```
-* 时间复杂度：恢复二段性处理中，最坏的情况下（考虑整个数组都是同一个数）复杂度是 $O(n)$，而之后的找旋转点是「二分」，复杂度为 $O(log{n})$。整体复杂度为 $O(n)$ 的。
-* 空间复杂度：$O(1)$。
+TypeScript 代码：
+```TypeScript 
+function minArray(nums: number[]): number {
+    const n = nums.length
+    let l = 0, r = n - 1
+    while (l < r && nums[0] == nums[r]) r--
+    while (l < r) {
+        const mid = l + r + 1 >> 1
+        if (nums[mid] >= nums[0]) l = mid
+        else r = mid - 1
+    }
+    return r + 1 < n ? nums[r + 1] : nums[0]
+};
+```
+* 时间复杂度：恢复二段性处理中，最坏的情况下（考虑整个数组都是同一个数）复杂度是 $O(n)$，而之后的找旋转点是「二分」，复杂度为 $O(\log{n})$。整体复杂度为 $O(n)$ 
+* 空间复杂度：$O(1)$
 
-***
+---
 
 ### 进阶
 
@@ -93,7 +102,7 @@ class Solution {
 
 建议大家在完成两题的基础上试试 [面试题 10.03. 搜索旋转数组](https://leetcode-cn.com/problems/search-rotate-array-lcci/) 。
 
-***
+---
 
 ### 其他「二分」相关题解
 
