--- a/LeetCode/31-40/34. 在排序数组中查找元素的第一个和最后一个位置（中等）.md
+++ b/LeetCode/31-40/34. 在排序数组中查找元素的第一个和最后一个位置（中等）.md
@@ -60,36 +60,26 @@ Tag : 「二分」
 代码：
 ```Java
 class Solution {
-    public int[] searchRange(int[] nums, int target) {
+    public int[] searchRange(int[] nums, int t) {
         int[] ans = new int[]{-1, -1};
         int n = nums.length;
         if (n == 0) return ans;
-
         int l = 0, r = n - 1;
         while (l < r) {
             int mid = l + r >> 1;
-            if (nums[mid] >= target) {
-                r = mid;
-            } else {
-                l = mid + 1;
-            }
+            if (nums[mid] >= t) r = mid;
+            else l = mid + 1;   
         }
-        if (nums[l] != target) {
-            return ans;
-        } else {
-            ans[0] = l;
-            l = 0; r = n - 1;
-            while (l < r) {
-                int mid = l + r + 1 >> 1;
-                if (nums[mid] <= target) {
-                    l = mid;
-                } else {
-                    r = mid - 1;
-                }
-            } 
-            ans[1] = l;
-            return ans;
+        if (nums[r] != t) return ans;
+        ans[0] = r;
+        l = 0; r = n - 1;
+        while (l < r) {
+            int mid = l + r + 1 >> 1;
+            if (nums[mid] <= t) l = mid;
+            else r = mid - 1;
         }
+        ans[1] = r;
+        return ans;
     }
 }
 ```
